--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
     <style>
       body {
         background-color: lightblue;
+        text-align: center;
       }
+      h1 {color: black;}
+      p { color : black;}
+      button { background-color: whitesmoke;
+             color: black;}
     </style>
     <title>freelancing Hub</title>
   </head>
 
   <body>
+    <h1>Welcome</h1>
     <img
       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQovsZB8mxDSrE4J28lR_bo9Z6xSqdHzOUl7Q&s"
       height="100"
@@ -20,5 +26,6 @@
       chance and you will be Happy.
     </p>
     <button>Contact Us</button>
+    <button> Click Me  </button>
   </body>
 </html>
