--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <style>
       body {
-        background-color: blue;
+        background-color: sky_blue;
         text-align: center;
       }
       h1 {color: black;}
